@@ -35,6 +35,7 @@ Linux NetworX and many other contributors.
 <li>Kent Engstr&ouml;m  (National Supercomputer Centre, Sweden)</li>
 <li>Jim Garlick (LLNL)</li>
 <li>Didier Gazen (Laboratoire d'Aerologie, France)</li>
+<li>Yiannis Georgiou (Bull)</li>
 <li>Mark Grondona (LLNL)</li>
 <li>Takao Hatazaki (HP, Japan)</li>
 <li>Matthieu Hautreux (CEA, France)</li>
