@@ -883,7 +883,8 @@ extern int sacctmgr_add_account(int argc, char *argv[])
 							     assoc_list);
 	} else {
 		exit_code=1;
-		fprintf(stderr, " Problem adding accounts\n");
+		fprintf(stderr, " Problem adding accounts: %s\n",
+			slurm_strerror(rc));
 		rc = SLURM_ERROR;
 		notice_thread_fini();
 		goto end_it;
@@ -900,7 +901,8 @@ extern int sacctmgr_add_account(int argc, char *argv[])
 	} else {
 		exit_code=1;
 		fprintf(stderr,
-			" error: Problem adding account associations\n");
+			" error: Problem adding account associations: %s\n",
+			slurm_strerror(rc));
 		rc = SLURM_ERROR;
 	}
 
@@ -912,7 +914,6 @@ end_it:
 
 	slurmdb_destroy_association_rec(start_assoc);
 	slurmdb_destroy_account_rec(start_acct);
-
 	return rc;
 }
 
